# jevmalloc

./: .gitmodules  Cargo.toml  README.md
jevmalloc/: Cargo.toml
jevmalloc-sys/: Cargo.toml  README.md  build.rs
jevmalloc-sys/src/: env.rs  lib.rs
jevmalloc-sys/tests/: malloc_conf_empty.rs  malloc_conf_set.rs  unprefixed_malloc.rs
jevmalloc/benches/: roundtrip.rs
jevmalloc/src/: global_alloc.rs  lib.rs
jevmalloc/src/ctl/: arenas.rs  config.rs  error.rs  keys.rs  macros.rs  mod.rs  opt.rs  profiling.rs  raw.rs  stats.rs  stats_print.rs  thread.rs
jevmalloc/tests/: ffi.rs  malloctl.rs  smoke.rs  smoke_ffi.rs  usable_size.rs
