[package]
name = "jevmalloc-sys"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true 
readme.workspace = true 
keywords.workspace = true 
categories.workspace = true 
repository.workspace = true 
homepage.workspace = true
documentation.workspace = true 
description.workspace = true 
build = "build.rs"
links = "jemalloc"

[lib]
test = false
bench = false

[features]
default = [
    "cache_oblivious",
    "initial_exec_tls",
    "unprefixed_malloc_on_supported_platforms",
]
cache_oblivious = []
check_safety = []
check_size_match = []
check_use_after_free = ["fill"]
fill = []
initial_exec_tls = []
paranoid = ["check_safety", "check_size_match", "check_use_after_free"]
profiling = []
stats = []
unprefixed_malloc_on_supported_platforms = []

[dependencies]
libc.workspace = true

[build-dependencies]
cc.workspace = true
rustflags.workspace = true

[lints]
workspace = true
