[package]
name = "jevmalloc"
edition.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
description.workspace = true

[features]
default = [
    "cache_oblivious",
    "initial_exec_tls",
    "unprefixed_malloc_on_supported_platforms",
]
cache_oblivious = ["jevmalloc-sys/cache_oblivious"]
check_safety = ["jevmalloc-sys/check_safety"]
check_size_match = ["jevmalloc-sys/check_size_match"]
check_use_after_free = ["fill", "jevmalloc-sys/check_use_after_free"]
fill = ["jevmalloc-sys/fill"]
global_hooks = []
initial_exec_tls = ["jevmalloc-sys/initial_exec_tls"]
paranoid = ["check_safety", "check_size_match", "check_use_after_free", "jevmalloc-sys/paranoid"]
profiling = ["jevmalloc-sys/profiling"]
stats = ["jevmalloc-sys/stats"]
unprefixed_malloc_on_supported_platforms = ["jevmalloc-sys/unprefixed_malloc_on_supported_platforms"]

[dependencies]
jevmalloc-sys.workspace = true
libc.workspace = true
paste.workspace = true

[lib]
test = false
bench = false

[[test]]
name = "ffi"
required-features = ["stats"]

[lints]
workspace = true
